Don't remove the autosave file after recovering. It will be properly cleaned up in cleanupAutoSave() anyway, which is only called after successful sending or saving as draft.

This fixes mail loss when KMail crashes before the first autosave kicks in, after
recovering a message.

BUG: 159634
MERGE: 3.5, trunk

svn path=/branches/KDE/4.4/kdepim/; revision=1093923