kmail/kmcomposewin.cpp
@@ -4198,10 +4198,6 @@ void KMComposeWin::updateAutoSave()
 
 void KMComposeWin::setAutoSaveFilename( const QString &filename )
 {
-  if ( !mAutoSaveFilename.isEmpty() ) {
-    KMFolderMaildir::removeFile( KMKernel::localDataPath() + "autosave",
-                                 mAutoSaveFilename );
-  }
   mAutoSaveFilename = filename;
 }
 
