kmail/kmkernel.cpp
@@ -1347,27 +1347,32 @@ void KMKernel::testDir( const char *_name )
 // Open a composer for each message found in the dead.letter folder
 void KMKernel::recoverDeadLetters()
 {
-  const QString pathName = localDataPath();
-  QDir dir( pathName );
-  if ( !dir.exists( "autosave" ) )
-    return;
-
-  KMFolder folder( 0, pathName + "autosave", KMFolderTypeMaildir, false /* no index */ );
-  KMFolderOpener openFolder( &folder, "recover" );
-  if ( !folder.isOpened() ) {
-    kError() << "Cannot open autosave folder!";
+  QDir dir( localDataPath() + "autosave/cur" );
+  if ( !dir.exists() ) {
+    kWarning() << "Autosave directory" << dir.path() << "not found!";
     return;
   }
 
-  const int num = folder.count();
-  for ( int i = 0; i < num; i++ ) {
-    KMMessage *msg = folder.take( 0 );
-    if ( msg ) {
-      KMail::Composer * win = KMail::makeComposer();
-      win->setMsg( msg, false, false, true );
-      win->setAutoSaveFilename( msg->fileName() );
-      win->show();
+  foreach( const QString &fileName, dir.entryList( QStringList(), QDir::Files, QDir::NoSort ) ) {
+    QFile file( fileName );
+    if ( !file.open( QIODevice::ReadOnly ) ) {
+      kWarning() << "Unable to open autosave file" << fileName;
+      continue;
     }
+    const QByteArray msgData = file.readAll();
+    file.close();
+
+    if ( msgData.isEmpty() ) {
+      kWarning() << "autosave file" << fileName << "is empty!";
+      continue;
+    }
+
+    KMMessage *msg = new KMMessage(); // Composer will take ownership
+    msg->fromString( msgData );
+    KMail::Composer * win = KMail::makeComposer();
+    win->setMsg( msg, false, false, true );
+    win->setAutoSaveFilename( fileName );
+    win->show();
   }
 }
 
